Fix main header z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,7 +123,6 @@ th.underlined {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
 }
 .wrapper,
 .about,
